# ffmpeg-mlu-docker-image

./: Dockerfile.16.04  README.md  build-image-ffmpeg-mlu.sh  build-image-ubuntu16.04-ffmpeg-mlu.sh  clean.sh  env.sh  load-image-ffmpeg-mlu.sh  load-image-ffmpeg.sh  load-image-ubuntu16.04-ffmpeg-mlu.sh  run-container-ffmpeg-mlu.sh  run-container-ffmpeg.sh  run-container-ubuntu16.04-ffmpeg-mlu.sh  save-image-ffmpeg-mlu.sh
dependent_files/: README.md
docker/: Dockerfile.16.04  Dockerfile.18.04  build-ffmpeg-mlu.sh  install_cntoolkit.sh  pre_packages.sh  pre_packages18.04.sh
test/: README.md
test/api/: clean.sh  test-ffmpeg-mlu-api.sh
test/api/transcode/: Makefile  input.txt
test/api/transcode/src/: transcode.cpp  transcode.h
test/api/transcoder/: clean.sh  test.sh
test/api/transcoder/src/: main.cpp  transcode.cpp
test/api/transcoder_vid2vid/: Makefile  README.md  clean.sh  make.sh  test.sh
test/api/transcoder_vid2vid/src/: main.cpp  vid2vid_trans.cpp  vid2vid_trans.h
test/api/video_decoder/: CMakeLists.txt  README.md  clean.sh
test/api/video_decoder/src/: decoder.cpp  decoder.h  main.cpp
test/api/video_encoder/: CMakeLists.txt  Makefile  README.md  clean.sh  input.txt
test/api/video_encoder/src/: main.cpp  video_encoder.cpp  video_encoder.h
test/api/video_hwdecoder/: CMakeLists.txt  README.md  input.txt  test.sh
test/api/video_hwdecoder/src/: hwdecoder.cpp  hwdecoder.h  main.cpp
test/cmd/: clean.sh  test-ffmpeg-mlu-cmd-decode-plus.sh  test-ffmpeg-mlu-cmd-decode.sh  test-ffmpeg-mlu-cmd-encode.sh  test-ffmpeg-mlu-cmd.sh
tools/: daemon-ali.json  daemon.json  rm-all-docker-container.sh  test-cnmon.sh
tools/srs/: build-srs.sh  clean.sh  download-srs.sh
